syntax = "proto3";

package io.github.hsedjame.grpc.tracing.models;
option java_multiple_files = true;

message Log {
  enum LogLevel {
    INFO = 0;
    WARNING = 1;
    ERROR = 3;
  }

  string message = 1;
  LogLevel level = 2;
}